assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Quicksand:wght@500&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
  font-family: 'Quicksand', sans-serif;
  font-weight: 500;
}

/* Header: Background, logo & navigation bar*/

#header-bg {
  height: 300px;
  width: 100%;
  background-color: rgba(144,238,144,0.9);
  background-image: url('../images/main_pic.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center bottom;
  border-bottom: black solid 3px;
}

#logo img {
  height: 300px;
  width: auto;
  float: left;
  z-index: 2;
}

/* Fixing the Header to the top  when  scrolling down*/
.navbar {
  overflow: hidden;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 2;
}

/* Header Navigation */
.nav {
  font-family: 'Fjalla One', sans-serif;
  font-weight: bold;
}

#menu {
  font-size: 130%;
  letter-spacing: 2px;
  display: flex;
  float: right;
  margin-top: 266px;
}

#menu li {
  list-style-type: none;
  margin-right: 35px;
}

#menu a {
  text-decoration: none;
  color: #000;
}

#menu a:hover {
  border-bottom: 1px solid #000;
}

.active {
  border-bottom: 2px solid #000;
}

/* main content*/
.main {
  margin-top: 300px;
  margin-bottom: 160px;
  background-image: url("../images/Kitchen_background2.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center bottom;
  background-attachment: fixed;
}

.main-content {
  margin: 0 28%;
  padding: 1% 1% 10%;
  background-color: rgba(144,238,144,0.9);
}

.main-content h2 {
  padding: 20px 0;
}

.main-content p {
  padding: 10px 0;
}

/* Hero Image */
#hero-outer {
  height: 600px;
  width: 100%;
  overflow: hidden;
  position: relative;
}

#hero-image {
  height: 600px;
  width: 100%;
  background: url(../images/company_van.jpg) rgba(144,238,144,0.9) center top no-repeat;
  background-size: cover;
  border-bottom: black solid 3px;
}

#cover-text, #cover-slogan {
  font-family: 'Fjalla One', sans-serif;
  font-weight: bold;
  letter-spacing: 3px;
  text-align: center;
}

#cover-text {
  font-size: 140%;
  width: 300px;
  height: 150px;
  padding: 20px 10px;
  background-color: rgba(144,238,144,0.9);
  bottom: 40%;
  left: 10%;
  position: absolute;
}


#cover-slogan {
  font-size: 185%;
  width: 300px;
  height: 150px;
  padding-top: 40px;
  background-color: rgba(0, 0, 0, 0.7);
  color: rgba(144,238,144,0.9);
  bottom: 55%;
  right: 10%;
  position: absolute;
}

/* Services */

#services {
  display: inline-flex;
}

#services h3 {
  font-size: 150%;
  text-decoration: underline double black 2px;
}

#left-service {
  width: 50%;
  margin-right: 2%;
  margin-top: 3%;
  margin-bottom: 3%;
}

#right-service {
  width: 50%;
  margin-left: 2%;
  margin-top: 3%;
  margin-bottom: 3%;
}

#exp {
  margin-top: 7%;
}

#exp, #service-h2 {
  text-align: center;
  font-size: 280%;
}

#service-h2 {
  text-transform: uppercase;
  letter-spacing: 4px;
  margin-bottom: 10px;
}

#circle-container {
  width: 300px;
  height: 300px;
  border-style: solid;
  border-color: rgb(0, 0, 0);
  border-width: 5px;
  border-radius: 50%;
  margin: 0 auto;
}

#circle-cover-bg {
  background: url('../images/service_center.jpg') no-repeat center center;
  height: 100%;
  border-radius: 50%;
}

/* Under services */

#more-service {
  margin-top: 2%;
  text-align: center;
  font-size: 110%;
}

/* Contact Form */

.contact-form {
  margin: 0 auto;
  max-width: 400px;
  padding: 30px;
  font-size: 110%;
  font-weight: bold;
}

.contact-form h2 {
  margin-top: 20%;
  margin-bottom: 20px;
  text-align: center;
  font-size: 270%;
}

.text-input {
  background: #fafafa;
  width: 100%;
  height: 25px;
  margin: 5px 0 20px;
  border: 1px solid #fafafa;
  border-radius: 2px;
}

.text-input:hover {
  border-color: black;
}

.textarea {
  width: 100%;
  height: 100px;
}

.sent-button {
  margin-top: 20px;
  border-radius: 2px;
  padding: 15px 32px;
  text-align: center;
  font-size: 100%;
  background-color: black;
  color: rgba(144,238,144,1);
  border: black solid 2px;
  display: inline-block;
  border-radius: 5px;
}

.sent-button:hover {
  background-color: rgba(144,238,144,0.7);
  color: black;
}


/* Footer: Bottom side navigation */

footer {
  position: fixed;
  bottom: 0;
  height: 160px;
  width: 100%;
  text-align: center;
  background: #000;
  color: rgba(144,238,144,0.9);
  padding: 0;
  letter-spacing: 2px;
}

/* video as footer background */
.nav video {
  height: 100%;
  min-width: auto;
  z-index:0;
}
/* Text over video */
.overlay {
  padding: 0.5%;
  width: 100%;
  position: absolute;
  top: 0;
  z-index: 2;
}

/* footer content */
footer a {
  text-decoration: none;
  color: rgba(144,238,144,0.9);
}

.footer-contact li, .footer-nav li {
  display: inline;
}

.footer-contact i {
  font-size: 145%;
  padding: 0 3%;
}

.footer-nav a {
  font-size: 95%;
  padding: 0 3%;
}

footer p {
  font-size: 70%;
  padding: 0.5% 0;
}

/* Legal content */

.server-log-scetion li {
  padding: 10px 0;
}

.server-log-scetion ul {
  padding-left: 20px;
}

/* Impressum */

.impressum-lists li {
  list-style-type: none;
}

.disclaimer-section h4 {
  padding-top: 2%;
}

/* Gallary */

.gallary-content {
  margin: 25px 28%;
  padding: 1% 1%;
  background-color: rgba(144,238,144,0.9);
  line-height: 0;
  column-gap: 0;
}

#gallery-video {
  width: 320;
  height: 240;
}

.gallary-content img {
  width: 100%;
}

#two-row-photos {
  display: flex;
  width: 50%;
}

.three-row-photos {
  column-count: 3;
  column-gap: 0;
}

#gallery-video {
  text-align: center;
  height: 100%;
  width: 100%;
}

/* media queries */

/* For screen sizes from 1800px wide and down */

@media screen and (max-width: 1800px) {
  .main-content {
    margin: 0 20%;
  }
}

/* For screen sizes from 1455px wide and down */


@media screen and (max-width: 1455px) {
  .main-content {
    margin: 0 15%;
  }
}

/* For screen sizes from 1275px wide and down */
@media screen and (max-width: 1275px) {

  /* navigationbar */
  #header-bg {
    height: 200px;
  }

  #logo img {
    height: 200px;
  }
  
  #menu {
    font-size: 100%;
    margin-top: 175px;
  }

 /* main layout */
  .main {
    margin-top: 200px;
  }

  .main-content {
    margin: 0 10%;
  }

    /* Hero image */
    #cover-text {
      bottom: 50%;
    }
    #cover-slogan {
      bottom: 65%;
    }
}
/* For screen sizes from 975px wide and down */
@media screen and (max-width: 975px) {

  /* navigationbar */
  #logo img {
    height: 160px;
  }

  #menu {
    margin-top: 15px;
    margin-left: 30px;
    float: left;
  }

  /* main layout */
  .main-content {
    margin: 0 5%;
  }

  /* Hero image */
  #cover-text {
    font-size: 100%;
    width: 250px;
    height: 100px;
    padding: 10px 5px;
    left: 10%;
    bottom: 40%;
  }
  #cover-slogan {
    font-size: 145%;
    width: 250px;
    height: 100px;
    padding-top: 20px;
    right: 10%;
    bottom: 70%;
  }

  /* Services */
  #exp, #service-h2 {
    font-size: 180%;
  }

  #circle-container {
    width: 150px;
    height: 150px;
  }

  #circle-cover-bg {
    background-size: cover;
  }

/* Footer */
  .footer-contact i {
    font-size: 110%;
    padding: 0 2%;
  }
  
  .footer-nav a {
    font-size: 85%;
  }
  
}
/* For screen sizes from 705px wide and down */
@media screen and (max-width: 705px) {
  /* main layout */
  .main-content {
    margin: 0 2%;
    padding: 1% 1% 10%;
  }

  /* Hero image */
  #cover-slogan {
    bottom: 75%;
  }

  /* Services */
  #services {
    display: block;
  }

  #left-service {
    display: flex;
    width: 90%;
    margin: 0 auto;
  }

  #left-service > div {
    margin: 0 2px;
  }
    
  #right-service {
    display: flex;
    width: 90%;
    margin: 0 auto;
  }

  #right-service > div {
    margin: 0 2px;
  }

}
/* For screen sizes from 465px wide and down */
@media screen and (max-width: 465px) {
 /* navigationbar */
  #header-bg {
    height: 165px;
  }
  #logo img {
    height: 140px;
  }
  #menu {
    font-size: 88%;
    margin-top: 5px;
    margin-left: 8px;
    letter-spacing: 1px;
  }
  #menu li {
    margin-right: 4px;
  }
  /* main layout */
  .main {
    margin-top: 165px;
  }
  /* Services */
  #exp, #service-h2 {
    font-size: 140%;
  }
  #left-service {
    display: block;
  }
  #right-service {
    display: block;
  }
/* Footer */
  .footer-contact i {
    font-size: 70%;
    padding: 0 6px;
  }
  .footer-nav a {
    font-size: 70%;
  }
  footer p {
    font-size: 60%;
  }
}
/* For screen sizes from 375px wide and down */
@media screen and (max-width: 375px) {
   /* navigationbar */
  #menu {
    font-size: 88%;
    margin-top: 4px;
    margin-left: 8px;
    letter-spacing: 0;
  }
  #menu li {
    margin-right: 5px;
  }
/* Footer */
  .footer-contact i {
    font-size: 50%;
    padding: 0 6px;
  }
  .footer-nav a {
    font-size: 60%;
  }
  footer p {
    font-size: 50%;
  }
}
/* For screen sizes from 320px wide and down */
@media screen and (max-width: 320px) {
  /* navigationbar */
  #menu {
    font-size: 80%;
    margin-top: 4px;
    margin-left: 4px;
  }

  #menu li {
    margin-right: 2px;
  }

/* Footer */
  .footer-contact i {
    font-size: 45%;
    padding: 0 3px;
  }
}

